[gd_scene load_steps=8 format=3 uid="uid://jmgqh4c2hvbf"]

[ext_resource type="Texture2D" uid="uid://dq511ufqytujj" path="res://Sprites/bat.png" id="1_j7be8"]
[ext_resource type="Script" uid="uid://bl36pthua8at0" path="res://Scripts/bat.gd" id="1_jckqh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jckqh"]
radius = 7.0

[sub_resource type="Animation" id="Animation_j7be8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_jckqh"]
resource_name = "fly"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wt6c1"]
_data = {
&"RESET": SubResource("Animation_j7be8"),
&"fly": SubResource("Animation_jckqh")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_wt6c1"]
radius = 8.0

[node name="Bat" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 4
script = ExtResource("1_jckqh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_j7be8")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jckqh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wt6c1")
}
autoplay = "fly"

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(-4, 3)
target_position = Vector2(0, 8)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(4, 3)
target_position = Vector2(0, 8)

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_wt6c1")
debug_color = Color(0.87645, 0, 0.0634567, 0.42)

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
